=======
CHANGES
=======

3.10.0 (unreleased)
------------------

- Moved BeforeTraverseEvent and IBeforeTraverseEvent to zope.traversing.

- Removed dependency on zope.i18n.

- Import hooks functionality from zope.component after it was moved there from
  zope.site.

- Import ISite from zope.component after it was moved there from
  zope.location.

3.9.0 (2009-09-29)
------------------

- An abort within handleExceptions could have failed without logging what
  caused the error. It now logs the original problem.

- Moved registration of and tests for two publication-specific event handlers
  here from zope.site in order to invert the package dependency.

- Declared the missing dependency on zope.location.

3.8.1 (2009-06-21)
------------------

- Bug fix: The publication traverseName method used ProxyFactory
  rather than the publication proxy method.

3.8.0 (2009-06-20)
------------------

- Added a proxy method that can be overridden in subclasses to control
  how/if security proxies are created.

- Replaced zope.deprecation dependency with backward-compatible imports

3.7.0 (2009-05-23)
------------------

- Moved the publicationtraverse module to zope.traversing, removing the
  zope.app.publisher -> zope.app.publication dependency (which was a
  cycle).

- Moved IHTTPException to zope.publisher, removing the dependency
  on zope.app.http.

- Moved the DefaultViewName API from zope.app.publisher.browser to
  zope.publisher.defaultview, making it accessible to other packages
  that need it.

- Look up the application controller through a utility registration
  rather than a direct reference.

3.6.0 (2009-05-18)
------------------

- Use ``zope:adapter`` ZCML directive instead of ``zope:view``.
  This avoid dependency on ``zope.app.component``.

- Update imports from ``zope.app.security`` to ``zope.authentication`` and
  ``zope.principalregistry``.

- Use ``zope.browser.interfaces.ISystemError`` to avoid dependency on
  ``zope.app.exception``.
