@@ -68,7 +68,7 @@ setup(name='zope.app.publication',
                       'zope.error',
                       'zope.browser>=1.2',
                       'zope.location',
-                      'zope.publisher>=3.8.0',
+                      'zope.publisher>=3.11.0',
                       'zope.traversing>=3.9.0',
                       'setuptools',
                       ],
