@@ -20,7 +20,7 @@
 
   <subscriber
       zcml:condition="installed zope.site"
-      for="zope.app.publication.interfaces.IEndRequestEvent"
+      for="zope.publisher.interfaces.IEndRequestEvent"
       handler="zope.site.clearThreadSiteSubscriber"
       />
 
